# OCR_P13

./: .gitignore  .readthedocs.yaml  DockerFile  Dockerfile  README.md  manage.py  oc-lettings-site.sqlite3  pyproject.toml  readme1.md  requirements.txt  run_docker.sh  setup.cfg
.github/workflows/: build_and_deploy_docs.yml  ci.yml
config/: settings.py  urls.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
flake8-report/: index.html
lettings/: apps.py  models.py  tests.py  views.py
lettings/archived_migrations/: 0002_transfer_data.py
lettings/migrations/: 0001_initial.py  0002_transfer_data.py
oc_lettings_site/: admin.py  apps.py  asgi.py  middleware.py  settings.py  tests.py  urls.py  views.py  wsgi.py
oc_lettings_site/migrations/: 0001_initial.py  0002_auto_20250401_1103.py  0003_auto_20250401_1113.py
profiles/: apps.py  models.py  tests.py  views.py
profiles/archived_migrations/: 0002_transfer_data.py
profiles/migrations/: 0001_initial.py  0002_transfer_data.py
static/css/: styles.css
staticfiles/: staticfiles.json
staticfiles/css/: styles.a4db461f08ca.css
templates/: 404.html  500.html  index.html
